--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,9 @@ body {
   font-weight: 400;
   color: #fff;
   background-color: $gray;
+  background-image: url("../images/main-bg.png");
+  background-size: cover;
+  background-position: center;
 }
 
 a {
@@ -53,6 +56,7 @@ ul li {
 }
 
 .title {
+  text-transform: uppercase;
   color: #fff;
   font-size: $fz-big;
   font-weight: 250;
@@ -88,7 +92,7 @@ ul li {
     border-radius: 500px;
     transform: rotate(161.87deg);
     z-index: -1;
-    opacity: 0.6;
+    opacity: 0.3;
   }
 
   &__title {
@@ -147,5 +151,96 @@ ul li {
 
 .advantages {
   padding-top: 121px;
-  padding-bottom: 100px;
+  padding-bottom: 155px;
+  background-image: url("../images/average-bg.png");
+  background-position: center;
+  background-size: 85%;
+  background-repeat: no-repeat;
+
+  &__title {
+    text-align: center;
+    max-width: 680px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  &__subtitle {
+    text-align: center;
+    max-width: 680px;
+    width: 100%;
+    margin: 0 auto;
+    font-size: $fz-average;
+    line-height: 33px;
+    letter-spacing: 0.03em;
+    font-weight: 300;
+  }
+
+  &__img {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    gap: 35px;
+
+    &-text {
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px;
+      max-width: 176px;
+      width: 100%;
+    }
+  }
+}
+
+.refill {
+  padding-top: 75px;
+  padding-bottom: 85px;
+  background-image: url("../images/refill-img.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: right;
+
+  &__text {
+    margin-top: 25px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 33px;
+    max-width: 370px;
+    width: 100%;
+  }
+
+  &__footer {
+    max-width: 235px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 80px;
+
+    .refill__manual {
+      display: flex;
+      align-items: center;
+      gap: 17px;
+
+      &-line {
+        width: 31px;
+        height: 1px;
+        background-color: $gray-light;
+      }
+    }
+
+    &-text {
+      margin-top: 20px;
+      font-size: 14;
+      font-weight: 400;
+      line-height: 24px;
+    }
+  }
 }
