--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -326,13 +326,13 @@ ul li {
   padding-bottom: 20px;
 }
 .smart__title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 45px;
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 45px;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
 }
 .smart__subtitle {
   max-width: 600px;
@@ -520,7 +520,11 @@ ul li {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(90deg, rgba(249,139,77,1) 4%, rgba(255,217,196,1) 83%);
+  background: linear-gradient(
+    90deg,
+    rgba(249, 139, 77, 1) 4%,
+    rgba(255, 217, 196, 1) 83%
+  );
   outline: none;
   border: none;
   border-radius: 1px;
@@ -533,9 +537,62 @@ ul li {
   cursor: pointer;
 }
 
+.task {
+  padding: 40px 0;
+}
+
+.task__title {
+  text-align: center;
+}
+
+.task__list {
+  margin-top: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.task__item {
+  max-width: 370px;
+  width: 100%;
+  height: auto;
+  border-radius: 2px;
+}
+.about {
+  padding: 40px 0;
+}
+
+.about__title {
+  text-align: center;
+  max-width: 1065px;
+  width: 100%;
+}
+.about__list {
+  margin-top: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.about__item {
+  max-width: 370px;
+  width: 100%;
+  height: auto;
+  border-radius: 2px;
+}
+
 @media (max-width: 1600px) {
   .refill__img-wrapper {
     right: 0;
+  }
+}
+
+@media(max-width: 1220px) {
+  .task__list,
+  .about__list {
+    justify-content: center;
   }
 }
 
@@ -562,7 +619,7 @@ ul li {
   }
 }
 
-@media(max-width: 1140px) {
+@media (max-width: 1140px) {
   .info__wrapper {
     margin: 0 auto;
     justify-content: center;
@@ -656,7 +713,7 @@ ul li {
     &::after {
       display: none;
     }
-  
+
     &::before {
       display: none;
     }
@@ -675,7 +732,7 @@ ul li {
   .smart {
     padding: 20px 0;
   }
-  
+
   .smart__title {
     flex-direction: column;
     gap: 10px;
@@ -700,9 +757,14 @@ ul li {
   .info__catalog-text {
     font-size: 24px;
   }
+
+  .task,
+  .about {
+    padding: 25px 0;
+  }
 }
 
-@media(max-width: 650px) {
+@media (max-width: 650px) {
   .subtitle {
     font-size: 15px;
   }
@@ -710,7 +772,7 @@ ul li {
   .header__top-text {
     display: none;
   }
-  
+
   .tel {
     margin-left: auto;
   }
@@ -719,7 +781,7 @@ ul li {
     font-size: 30px;
     line-height: 40px;
   }
-  
+
   .banner {
     padding-bottom: 50px;
   }
