add-author-section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -602,12 +602,20 @@ ul li {
 .author__block {
   max-width: 580px;
   width: 100%;
-  
+
   &:first-child {
     max-width: 535px;
     width: 100%;
   }
 }
+
+.author__block-wrapper {
+  height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .author__block-img {
   width: 100%;
   height: auto;
@@ -621,13 +629,14 @@ ul li {
 .author__item {
   display: flex;
   flex-direction: column;
+  gap: 30px;
 }
 .author__item-title {
   font-size: 12px;
   font-weight: 500;
-  line-height: 55px;
   letter-spacing: 0.135em;
   color: rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
 }
 .author__item-text {
   font-size: 24px;
@@ -637,9 +646,6 @@ ul li {
   height: 28px;
   border-radius: 50%;
   background-color: $yellow;
-}
-.author__length {
-  
 }
 .range__wrapper {
   display: flex;
@@ -657,8 +663,8 @@ ul li {
   width: 100%;
   position: relative;
   -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
   &::-webkit-slider-runnable-track {
     -webkit-appearance: none;
@@ -676,14 +682,13 @@ ul li {
     cursor: pointer;
     margin-top: -14px;
   }
-  
 }
 
 .facial__slider-wrapper {
   position: relative;
   width: max-content;
   padding: 0 35px;
-  
+
   .swiper-button-next {
     right: 0;
     top: 70%;
@@ -696,12 +701,98 @@ ul li {
 
 .facial__panel-slider {
   width: 250px;
-}
-.swiper-wrapper {
-}
-.swiper-slide {
+  margin-top: 20px;
 }
 
+.checkboxs {
+  margin-top: 30px;
+}
+
+.checkboxs__lists {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.checkbox__list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-width: 230px;
+  width: 100%;
+}
+.checkbox__wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox__label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 80px;
+  cursor: pointer;
+  width: 100%;
+
+  &::after {
+    content: "";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #191919;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    border-radius: 2px;
+    border: 1px solid $yellow;
+    cursor: pointer;
+  }
+}
+
+.checkbox__input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+
+  &:checked + .checkbox__label::after {
+    content: "+";
+    background: $yellow;
+    font-size: $fz-average;
+  }
+}
+
+.callback {
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.callback__price {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.callback__price-title {
+  font-size: 12px;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
+}
+
+.callback__price-value {
+  font-size: 36px;
+  font-weight: 300;
+  color: $yellow;
+  letter-spacing: 0.05em;
+}
+
+.callback__price-btn {
+  margin: 0;
+}
 @media (max-width: 1600px) {
   .refill__img-wrapper {
     right: 0;
