--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
 $white: #fff;
-$yellow: #FFCF7A;
+$yellow: #ffcf7a;
 $black: #121212;
-$gray: #1B1B1A;
+$gray: #1b1b1a;
 $gray-light: #949494;
 
 $fz-extra-big: 64px;
